# divoom-eth

./: .gitignore  CLAUDE.md  Dockerfile  README.md  beacon_client.py  defillama_client.py  divoom_client.py  l2_metrics.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  slot_client.py  validator_gadget.py
.cursor/rules/: code_standards.mdc  development_workflow.mdc  project_architecture.mdc
.cursor/rules/ui/: ui.mdc
.cursor/rules/ui/src/: src.mdc
.github/workflows/: release.yml
ai_plans/: defillama_ethereum_defi_views.md  defillama_implementation_checklist.md
ui/: CLAUDE.md  CURSOR.mdc  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  CLAUDE.md  CURSOR.mdc  fonts.css  main.tsx  types.ts
ui/src/components/: BaseLayout.tsx  SlotHistory.tsx
ui/src/views/admin/: Admin.tsx
ui/src/views/defi-tvl/: defi-tvl.tsx
ui/src/views/defi-volume/: defi-volume.tsx
ui/src/views/defi-yields/: defi-yields.tsx
ui/src/views/entities/: Entities.tsx
ui/src/views/execution/: execution.tsx
ui/src/views/layer2/: layer2.tsx
ui/src/views/overview/: Overview.tsx
ui/src/views/proposer/: Proposer.tsx
ui/src/views/slot/: slot.tsx
